update upstream django sesuai dengan service docker compose

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ http {
 
     # Upstream Django
     upstream django {
-        server saudah-web:8000;
+        server web:8000;
     }
 
     server {
