menghapus .json di nginx supaya dokumentasi api bisa diakses

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
         client_max_body_size 100M;
 
         # Drop PHP attempts
-        location ~* \.(php|php5|php7|phtml|phps|asp|aspx|ashx|jsp|jspx|do|action|cgi|pl|ctp|inc|bak|swp|orig|sql|env|yaml|yml|json|zip|tar\.gz|7z|htaccess|htpasswd)$ {
+        location ~* \.(php|php5|php7|phtml|phps|asp|aspx|ashx|jsp|jspx|do|action|cgi|pl|ctp|inc|bak|swp|orig|sql|env|yaml|yml|zip|tar\.gz|7z|htaccess|htpasswd)$ {
             access_log off;
             return 444;
         }
