--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     networks:
       - dkkm-network
     healthcheck:
-      test: ["CMD-SHELL", "psql -U ${STAGGING_DB_USER} -d {STAGGING_DB_NAME}"]
+      test: ["CMD-SHELL", "psql -U ${STAGGING_DB_USER} -d ${STAGGING_DB_NAME}"]
       interval: 10s
       timeout: 5s
       retries: 5
