--- a/docker-compose-supabase.yml
+++ b/docker-compose-supabase.yml
@@ -7,6 +7,8 @@ services:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     container_name: dkkm-web-prod
+    dns:
+      - 1.1.1.1
     env_file:
       - .env
     expose:
