--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
 
     server {
         listen 80;
-        server_name dkkm.jastipin.id;
+        server_name _;
 
         # Security Headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -36,13 +36,6 @@ http {
         # Proxy to Django
         location / {
             proxy_pass http://django;
-
-            # HARUS ADA untuk Cloudflare Tunnel
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Connection "";
-
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
