--- a/docker-compose-supabase.yml
+++ b/docker-compose-supabase.yml
@@ -37,6 +37,8 @@ services:
     container_name: dkkm-nginx-prod
     expose:
       - "80"
+    ports:
+      - "8080:80"
     depends_on:
       - web
     networks:
