--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,16 +43,16 @@ http {
             proxy_redirect off;
         }
 
-        # Static files
-        location /static/ {
-            alias /usr/share/nginx/html/staticfiles/;
-            expires 30d;
-        }
+        # # Static files
+        # location /static/ {
+        #     alias /usr/share/nginx/html/staticfiles/;
+        #     expires 30d;
+        # }
 
-        # Media files
-        location /media/ {
-            alias /usr/share/nginx/html/media/;
-            expires 30d;
-        }
+        # # Media files
+        # location /media/ {
+        #     alias /usr/share/nginx/html/media/;
+        #     expires 30d;
+        # }
     }
 }
