--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
 
     server {
         listen 80;
-        server_name dkkm.jastipin.id;
+        server_name dkkm.stasiuntech.my.id;
 
         # Security Headers
         add_header X-Frame-Options "SAMEORIGIN" always;
