Menambahkan cloudflare bucket

--- a/env.example
+++ b/env.example
@@ -10,3 +10,11 @@ STAGGING_DB_PORT=
 CLOUDFLARE_TUNNEL_TOKEN=
 # api key untuk api
 APIKEY_IMARAH_BLACKLIST=
+
+# cloudflare bucket
+R2_ACCOUNT_ID=
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
+R2_BUCKET_NAME=
+R2_DEVELOPMENT_URL= # For Develoopment
+R2_MEDIA_DOMAIN= # for Production
